# haskell-calculator

./: LICENSE  README.md  build-web-gui.sh  calculator.cabal  stack.ghcjs.yaml  stack.yaml  stack.yaml.ghcjs
source/: Main.hs
source/cli/: Main.hs
source/executable/: Main.hs
source/gui/: Main.hs
source/test/: Test.hs
source/web/: Calculator.hs
style/: style.css
