name:           calculator
version:        0.1.0.0
synopsis:       Example calculator
license:        BSD3
license-file:   LICENSE
author:         Jonathan Knowles
maintainer:     mail@jonathanknowles.net
copyright:      Jonathan Knowles
category:       Parsing
build-type:     Simple
cabal-version:  >= 1.10

library
    hs-source-dirs:     source/library
    exposed-modules:    Calculator
    build-depends:      attoparsec >= 0.13.0.2 && < 1,
                        base       >= 4.7      && < 5,
                        text       >= 1.2.2.1  && < 2
    default-language:   Haskell2010

executable calculator
    hs-source-dirs:     source/executable
    main-is:            Main.hs
    build-depends:      base       >= 4.7     && < 5,
                        text       >= 1.2.2.1 && < 2,
                        calculator
    default-language:   Haskell2010

test-suite test
    hs-source-dirs:     source/test
    type:               exitcode-stdio-1.0
    main-is:            Test.hs
    build-depends:      base       >= 4.7     && < 5,
                        QuickCheck >= 2.8.2   && < 3,
                        text       >= 1.2.2.1 && < 2,
                        calculator
    default-language:   Haskell2010

