name:           calculator
version:        0.1.0.0
synopsis:       Example calculator
license:        BSD3
license-file:   LICENSE
author:         Jonathan Knowles
maintainer:     mail@jonathanknowles.net
copyright:      Jonathan Knowles
category:       Parsing
build-type:     Simple
cabal-version:  >= 1.10

library
    hs-source-dirs:     source/library
    exposed-modules:    Calculator.CommandLineInterface,
                        Calculator.Evaluation,
                        Calculator.Parsing,
                        Calculator.Pretty,
                        Calculator.Printing,
                        Calculator.Test,
                        Calculator.Tokens,
                        Calculator.Types,
                        Calculator.Value,
                        Calculator.WebInterface,
                        Reflex.Dom.Extras
    build-depends:      attoparsec      >= 0.13.0.1 && < 1,
                        base            >= 4.7      && < 5,
                        containers      >= 0.5.7.1  && < 1,
                        ghcjs-base      >= 0.2.0.0  && < 1,
                        text            >= 1.2.1.1  && < 2,
                        QuickCheck      >= 2.8.1    && < 3,
                        reflex          >= 0.5.0    && < 1,
                        reflex-dom      >= 0.4      && < 1
    default-language:   Haskell2010

executable calculator
    hs-source-dirs:     source/executable
    main-is:            Calculator.hs
    build-depends:      calculator
    default-language:   Haskell2010

executable web
    hs-source-dirs:     source/web
    main-is:            Calculator.hs
    build-depends:      calculator
    default-language:   Haskell2010

test-suite test
    hs-source-dirs:     source/test
    main-is:            Test.hs
    build-depends:      calculator
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0

